kubernetes/apps/kiali/kiali/app/ingress.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/networking.k8s.io/ingress_v1.json
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app kiali-tailscale
  namespace: kiali
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
  annotations:
    tailscale.com/hostname: kiali
    tailscale.com/force-reconcile: "2"
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - kiali.rya-bebop.ts.net
  rules:
    - host: kiali.rya-bebop.ts.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kiali
                port:
                  number: 20001
